update packages, fix alignment issues for mobile layout

--- a/src/style.css
+++ b/src/style.css
@@ -594,6 +594,9 @@ details p {
     font-size: 1.25rem;
     display: block;
   }
+  .download-box .section__title {
+    text-align: center;
+  }
 }
 
 .menuOpen {
